<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="rewarded_video">Rewarded Video</string>
    <string name="interstitial">Interstitial</string>
    <string name="show">Show</string>
    <string name="request">Request</string>
    <string name="request_multiple">Multiple Requests (5)</string>
    <string name="destroy">Destroy</string>
    <string name="native_banner">Native Banner</string>
    <string name="native_video">Native Video</string>
    <string name="standard_banner">Standard Banner</string>
    <string name="request_vast">Request VAST</string>
    <string name="preroll">PreRoll</string>
    <string name="app_open">AppOpen</string>
    <string name="native_ad">Native</string>
    <string name="native_list">Native List</string>
    <string name="replay_video">Replay Video</string>
    <string name="sponsored">Sponsored</string>
</resources>