...
    Zone("All AdNetworks", ZoneType.NATIVE, "d217e3e6-0070-4120-925d-5d39d0298893"),
    Zone("All AdNetworks (VIDEO)", ZoneType.NATIVE, "f3fb937a-bb3d-4e54-8d4c-2f4aa963c74c"),
    Zone("All AdNetworks", ZoneType.PRE_ROLL, "6977a96f-e265-4895-b219-33bb6ba3df85"),
)

private val LegacyKeys = listOf(
    Zone("Tapsell Legacy", ZoneType.REWARDED, "63b92f04-3d0f-4805-84a4-abeccf4edc18"),
    Zone("Tapsell Legacy", ZoneType.INTERSTITIAL, "0c4e2849-feea-4688-8280-0b0ae2ee0728"),
    Zone("Tapsell Legacy", ZoneType.BANNER, "4bf4e11d-0967-41e6-91f6-a128d9462f2a"),
    Zone("Tapsell Legacy", ZoneType.NATIVE, "b1b92bca-8a54-4b82-9f53-90ea2b1a912c"),
    Zone("Tapsell Legacy (VIDEO)", ZoneType.NATIVE, "236e51ac-4fed-4263-b50a-7240558c73cb"),
    Zone("Tapsell Legacy", ZoneType.PRE_ROLL, "ca7355fa-2b59-436f-9f73-70b408d54b6a"),
)
...
