appId: ir.tapsell.sample
---
- launchApp:
    appId: ir.tapsell.sample
    clearState: true
- startRecording: PreRoll
- extendedWaitUntil:
      visible: "onInitializationComplete.*"
      timeout: 15000
- tapOn:
    text: PreRoll
- tapOn:
      text: Tapsell Legacy
      repeat: 1
      delay: 2000
- tapOn:
    text: Request
    repeat: 1
    delay: 5000
- extendedWaitUntil:
    visible: .*onSuccess.*
    timeout: 5000
- tapOn:
    text: Show
- extendedWaitUntil:
    visible: .*onAdImpression.*
    timeout: 10000
- stopRecording
- takeScreenshot: maestro-outputs/PreRoll
- stopApp